blogify the static Norfolk.js site

--- a/index.html
+++ b/index.html
@@ -1,50 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
-
-    <title>Norfolkjs.github.io by norfolkjs</title>
-  </head>
-
-  <body>
-
-    <header>
-      <div class="container">
-        <h1>Norfolkjs.github.io</h1>
-        <h2>Blog for Norfolk.js</h2>
-
-        <section id="downloads">
-          <a href="https://github.com/norfolkjs" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
-
-    <div class="container">
-      <section id="main_content">
-        <h3>
-<a name="about" class="anchor" href="#about"><span class="octicon octicon-link"></span></a>About</h3>
-
-<p>NorfolkJs is a JavaScript development user group in Norfolk, VA.</p>
-
-<p>We want to get local developers together to consume pizza and beer and talk about anything and everything JavaScript.</p>
-
-<h3>
-<a name="meetups" class="anchor" href="#meetups"><span class="octicon octicon-link"></span></a>Meetups</h3>
-
-<p><a href="http://www.meetup.com/norfolkjs">http://www.meetup.com/norfolkjs</a></p>
-
-<h3>
-<a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h3>
-
-<p>Tweet us: <a href="https://github.com/norfolkjs" class="user-mention">@norfolkjs</a></p>
-      </section>
-    </div>
-
-    
-  </body>
-</html>
+---
+layout: layout
+title: "Norfolk.js"
+---
