added about, contacts, sponsors links and pages

--- a/about/index.html
+++ b/about/index.html
@@ -2,3 +2,15 @@
 layout: layout
 title: "About Norfolk.js"
 ---
+
+
+<h3>
+  <a name="about" class="anchor" href="#about">
+    <span class="octicon octicon-link"></span></a>About
+</h3>
+<p>Norfolk.js is a JavaScript development user group in Norfolk, VA.</p>
+<p>We want to get local developers together to consume pizza and beer and talk about anything and everything JavaScript.</p>
+<br>
+<h3>Meetups</h3>
+<p><a href="http://www.meetup.com/norfolkjs">
+http://www.meetup.com/norfolkjs</a></p>
