--- a/contact/index.html
+++ b/contact/index.html
@@ -2,3 +2,21 @@
 layout: layout
 title: "Contact Norfolk.js"
 ---
+
+<h3>Want to sponsor a meetup or speak?</h3>
+<p>
+<p>Contact us:</p>
+<p>Travis Webb</p>
+Github: <a href="http://github.com/tjwebb" class="user-mention">@tjwebb</a>
+Twitter: <a href="https://twitter.com/traviswebbusa" class="user-mention">@traviswebbusa</a>
+</p>
+<p>
+<p>Linda Nichols </p>
+ Github: <a href="https://github.com/lynnaloo" class="user-mention">@lynnaloo</a>
+ Twitter: <a href="https://twitter.com/lynnaloo" class="user-mention">@lynnaloo</a>
+</p>
+<p>
+<p>Brandon Flade</p>
+ Github: <a href="https://github.com/_bmf_" class="user-mention">@_bmf_</a>
+ Twitter: <a href="https://twitter.com/_bmf_" class="user-mention">@_bmf_</a>
+</p>
