--- a/contact/index.html
+++ b/contact/index.html
@@ -4,19 +4,21 @@ title: "Contact Norfolk.js"
 ---
 
 <h3>Want to sponsor a meetup or speak?</h3>
-<p>
-<p>Contact us:</p>
-<p>Travis Webb</p>
-Github: <a href="http://github.com/tjwebb" class="user-mention">@tjwebb</a>
-Twitter: <a href="https://twitter.com/traviswebbusa" class="user-mention">@traviswebbusa</a>
-</p>
-<p>
-<p>Linda Nichols </p>
- Github: <a href="https://github.com/lynnaloo" class="user-mention">@lynnaloo</a>
- Twitter: <a href="https://twitter.com/lynnaloo" class="user-mention">@lynnaloo</a>
-</p>
-<p>
-<p>Brandon Flade</p>
- Github: <a href="https://github.com/_bmf_" class="user-mention">@_bmf_</a>
- Twitter: <a href="https://twitter.com/_bmf_" class="user-mention">@_bmf_</a>
-</p>
+
+<dl>
+  <dt>Travis Webb</dt>
+  <dd>Github: <a href="http://github.com/tjwebb" class="user-mention">@tjwebb</a></dd>
+  <dd>Twitter: <a href="https://twitter.com/traviswebbusa" class="user-mention">@traviswebbusa</a></dd>
+
+  <dt>Linda Nichols</dt>
+  <dd>Github: <a href="https://github.com/lynnaloo" class="user-mention">@lynnaloo</a></dd>
+  <dd>Twitter: <a href="https://twitter.com/lynnaloo" class="user-mention">@lynnaloo</a></dd>
+
+  <dt>Brandon Flade</dt>
+  <dd>Github: <a href="https://github.com/_bmf_" class="user-mention">@_bmf_</a></dd>
+  <dd>Twitter: <a href="https://twitter.com/_bmf_" class="user-mention">@_bmf_</a></dd>
+
+  <dt>Stanley Zheng</dt>
+  <dd>Github: <a href="https://github.com/_bmf_" class="user-mention">@stanzheng</a></dd>
+  <dd>Twitter: <a href="https://twitter.com/_bmf_" class="user-mention">@StanZheng</a></dd>
+</dl>
