--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -2,3 +2,20 @@
 layout: layout
 title: "Our Awesome Sponsors"
 ---
+<p>
+<a href="http://www.stickermule.com/unlock?ref_id=5974530701">
+  <img alt="Custom Stickers, Die Cut Stickers, Bumper Stickers - Sticker Mule" border="0" height="60" src="https://d1vje5lvs6ypii.cloudfront.net/assets/users/banners/small-8b571984d3d8e9274ec182dbf4878968.jpg" width="234" />
+</a>
+</p>
+
+<p>
+<a href="http://www.nostarchpress.com">
+  <img alt="The finest in geek entertainment - No Starch Press" border="0" height="150px" src="/images/nostarch_sm.png" width="150px" />
+</a>
+</p>
+
+<p>
+<a href="http://www.teamtreehouse.com">
+  <img alt="Learn HTML, CSS, iPhone apps and more - Treehouse" border="0" height="61px" src="/images/treehouse.png" width="234px" />
+</a>
+</p>
