added oreilly to the sponsors page

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -19,3 +19,9 @@ title: "Our Awesome Sponsors"
   <img alt="Learn HTML, CSS, iPhone apps and more - Treehouse" border="0" height="61px" src="/images/treehouse.png" width="234px" />
 </a>
 </p>
+
+<p>
+<a href="http://oreilly.com/">
+  <img alt="Member of the O'Reilly user group program - O'Reilly" border="0" height="60px" src="/images/ug_ad_250_viguy.gif" width="250px" />
+</a>
+</p
