--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: "Norfolk.js"
 <div class="posts">
 {% for post in site.posts %}
     <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-    <p>{{ post.date | date: '%B %d, %Y' }}</p>
+    <p>Posted: {{ post.date | date: '%B %d, %Y' }}</p>
     <p>{{ post.excerpt }}</p>
     <hr />
     <br>
