--- a/contact/index.html
+++ b/contact/index.html
@@ -6,6 +6,10 @@ title: "Contact Norfolk.js"
 <h3>Want to sponsor a meetup or speak?</h3>
 
 <dl>
+  <dt>NorfolkJS </dt>
+  <dd>Github: <a href="http://github.com/norfolkjs" class="user-mention">@NorfolkJS</a></dd>
+  <dd>Twitter: <a href="https://twitter.com/norfolkjs" class="user-mention">@NorfolkJS</a></dd>
+
   <dt>Travis Webb</dt>
   <dd>Github: <a href="http://github.com/tjwebb" class="user-mention">@tjwebb</a></dd>
   <dd>Twitter: <a href="https://twitter.com/traviswebbusa" class="user-mention">@traviswebbusa</a></dd>
