--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -4,7 +4,7 @@ title: "Our Awesome Sponsors"
 ---
 <p>
 <a href="http://www.stickermule.com/unlock?ref_id=5974530701">
-  <img alt="Custom Stickers, Die Cut Stickers, Bumper Stickers - Sticker Mule" border="0" height="60" src="https://d1vje5lvs6ypii.cloudfront.net/assets/users/banners/small-8b571984d3d8e9274ec182dbf4878968.jpg" width="234" />
+  <img alt="Custom Stickers, Die Cut Stickers, Bumper Stickers - Sticker Mule" border="0" height="60" src="/images/stickermule.jpg" width="234" />
 </a>
 </p>
 
