--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -2,6 +2,7 @@
 layout: layout
 title: "Our Awesome Sponsors"
 ---
+
 <p>
 <a href="http://www.stickermule.com/unlock?ref_id=5974530701">
   <img alt="Custom Stickers, Die Cut Stickers, Bumper Stickers - Sticker Mule" border="0" height="60" src="/images/stickermule.jpg" width="234" />
@@ -9,8 +10,11 @@ title: "Our Awesome Sponsors"
 </p>
 
 <p>
-<a href="http://www.nostarchpress.com">
+<a href="http://www.nostarchpress.com" style="color: #FFFFFF;text-decoration: none;">
   <img alt="The finest in geek entertainment - No Starch Press" border="0" height="150px" src="/images/nostarch_sm.png" width="150px" />
+</a>
+<a href="http://oreilly.com/">
+  <img alt="Member of the Manning Press user group program - Manning" border="0"  src="http://www.manning.com/ugprogram/images/banner2.jpg"/>
 </a>
 </p>
 
@@ -24,4 +28,4 @@ title: "Our Awesome Sponsors"
 <a href="http://oreilly.com/">
   <img alt="Member of the O'Reilly user group program - O'Reilly" border="0" height="60px" src="/images/ug_ad_250_viguy.gif" width="250px" />
 </a>
-</p
+</p>
