adding jquery and starting work on meetup api js

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -3,6 +3,8 @@ layout: layout
 title: "Our Awesome Sponsors"
 ---
 
+<script src="/javascripts/meetup.js"></script>
+
 <p>
 <a href="http://www.stickermule.com/unlock?ref_id=5974530701">
   <img alt="Custom Stickers, Die Cut Stickers, Bumper Stickers - Sticker Mule" border="0" height="60" src="/images/stickermule.jpg" width="234" />
