sponsors are getting added

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -4,7 +4,7 @@ title: "Our Awesome Sponsors"
 ---
 
 <script src="/javascripts/meetup.js"></script>
-
+<div id="sponsors">hi</div>
 <p>
 <a href="http://www.stickermule.com/unlock?ref_id=5974530701">
   <img alt="Custom Stickers, Die Cut Stickers, Bumper Stickers - Sticker Mule" border="0" height="60" src="/images/stickermule.jpg" width="234" />
