adds sponsors, buggy because of perks

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -4,7 +4,8 @@ title: "Our Awesome Sponsors"
 ---
 
 <script src="/javascripts/meetup.js"></script>
-<div id="sponsors">hi</div>
+<div id="sponsors"><h1>Our Awesome Sponsors</h1></div>
+<!--
 <p>
 <a href="http://www.stickermule.com/unlock?ref_id=5974530701">
   <img alt="Custom Stickers, Die Cut Stickers, Bumper Stickers - Sticker Mule" border="0" height="60" src="/images/stickermule.jpg" width="234" />
@@ -31,3 +32,4 @@ title: "Our Awesome Sponsors"
   <img alt="Member of the O'Reilly user group program - O'Reilly" border="0" height="60px" src="/images/ug_ad_250_viguy.gif" width="250px" />
 </a>
 </p>
+-->
