added css background styling, and css

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -4,4 +4,5 @@ title: "Our Awesome Sponsors"
 ---
 
 <script src="/javascripts/meetup.js"></script>
-<div id="sponsors"><h1>Our Awesome Sponsors</h1></div>
+<h1 class = "h1sponsors">Our Awesome Sponsors</h1>
+<div class="sponsors"></div>
