--- a/events/index.html
+++ b/events/index.html
@@ -4,5 +4,5 @@ title: "Upcoming Events"
 ---
 
 <script src="/javascripts/events.js"></script>
-<h1 class = "h1events">Our Awesome Sponsors</h1>
+<h1 class = "h1events">Upcoming Events</h1>
 <div class="events"></div>
