--- a/contact/index.html
+++ b/contact/index.html
@@ -19,7 +19,7 @@ title: "Contact Norfolk.js"
   <dd>Twitter: <a href="https://twitter.com/lynnaloo" class="user-mention">@lynnaloo</a></dd>
 
   <dt>Brandon Flade</dt>
-  <dd>Github: <a href="https://github.com/_bmf_" class="user-mention">@_bmf_</a></dd>
+  <dd>Github: <a href="https://github.com/bmf" class="user-mention">@bmf</a></dd>
   <dd>Twitter: <a href="https://twitter.com/_bmf_" class="user-mention">@_bmf_</a></dd>
 
   <dt>Stanley Zheng</dt>
