updating the sponsorship language, could use improvement

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -3,6 +3,12 @@ layout: layout
 title: "Our Awesome Sponsors"
 ---
 
-<script src="/javascripts/meetup.js"></script>
-<h1 class = "h1sponsors">Our Awesome Sponsors</h1>
-<div class="sponsors"></div>
+<script src ="/javascripts/meetup.js"></script>
+
+<h1 class ="h1sponsors">Our Awesome Sponsors</h1>
+  <h3>Get in touch with any organizer to find out how to get involved and support our members
+      <a href="/contact">Talk to an organizer!</a>
+  </h3>
+
+<h1>Companies who support NorfolkJS</h1>
+  <div class ="sponsors"></div>
