cleaning up css and events page

--- a/contact/index.html
+++ b/contact/index.html
@@ -3,6 +3,10 @@ layout: layout
 title: "Contact Norfolk.js"
 ---
 
+<h1>Contact Us</h1>
+
+<br>
+
 <h3>Want to sponsor a meetup or speak?</h3>
 
 <dl>
