--- a/index.html
+++ b/index.html
@@ -4,5 +4,11 @@ title: "Upcoming Events"
 ---
 
 <script src="/javascripts/events.js"></script>
-<h1 class = "h1events">Upcoming Events</h1>
-<div class="events"></div>
+
+<h1>Upcoming Events</h1>
+
+<br>
+
+<div class="api_container">
+  <div class="events"></div>
+</div>
