--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -3,12 +3,14 @@ layout: layout
 title: "Our Awesome Sponsors"
 ---
 
-<script src ="/javascripts/meetup.js"></script>
+<script src ="/javascripts/sponsors.js"></script>
 
-<h1 class ="h1sponsors">Our Awesome Sponsors</h1>
-  <h3>Get in touch with any organizer to find out how to get involved and support our members
-      <a href="/contact">Talk to an organizer!</a>
-  </h3>
+<h1>Our Awesome Sponsors</h1>
 
-<h1>Companies who support NorfolkJS</h1>
-  <div class ="sponsors"></div>
+<div class="api_container">
+  <div class= "sponsors"></div>
+</div>
+
+<br>
+
+<h3><a href="/contact">Contact us</a> to find out how to get involved and support Norfolk.js</h3>
