--- a/contact/index.html
+++ b/contact/index.html
@@ -9,24 +9,26 @@ title: "Contact Norfolk.js"
 
 <h3>Want to sponsor a meetup or speak?</h3>
 
-<dl>
-  <dt>NorfolkJS </dt>
-  <dd>Github: <a href="http://github.com/norfolkjs" class="user-mention">@NorfolkJS</a></dd>
-  <dd>Twitter: <a href="https://twitter.com/norfolkjs" class="user-mention">@NorfolkJS</a></dd>
+<div class="contacts">
+  <dl>
+    <dt>Norfolk.js </dt>
+    <dd>Github: <a href="http://github.com/norfolkjs" class="user-mention">@NorfolkJS</a></dd>
+    <dd>Twitter: <a href="https://twitter.com/norfolkjs" class="user-mention">@NorfolkJS</a></dd>
 
-  <dt>Travis Webb</dt>
-  <dd>Github: <a href="http://github.com/tjwebb" class="user-mention">@tjwebb</a></dd>
-  <dd>Twitter: <a href="https://twitter.com/traviswebbusa" class="user-mention">@traviswebbusa</a></dd>
+    <dt>Travis Webb</dt>
+    <dd>Github: <a href="http://github.com/tjwebb" class="user-mention">@tjwebb</a></dd>
+    <dd>Twitter: <a href="https://twitter.com/traviswebbusa" class="user-mention">@traviswebbusa</a></dd>
 
-  <dt>Linda Nichols</dt>
-  <dd>Github: <a href="https://github.com/lynnaloo" class="user-mention">@lynnaloo</a></dd>
-  <dd>Twitter: <a href="https://twitter.com/lynnaloo" class="user-mention">@lynnaloo</a></dd>
+    <dt>Linda Nichols</dt>
+    <dd>Github: <a href="https://github.com/lynnaloo" class="user-mention">@lynnaloo</a></dd>
+    <dd>Twitter: <a href="https://twitter.com/lynnaloo" class="user-mention">@lynnaloo</a></dd>
 
-  <dt>Brandon Flade</dt>
-  <dd>Github: <a href="https://github.com/bmf" class="user-mention">@bmf</a></dd>
-  <dd>Twitter: <a href="https://twitter.com/_bmf_" class="user-mention">@_bmf_</a></dd>
+    <dt>Brandon Flade</dt>
+    <dd>Github: <a href="https://github.com/bmf" class="user-mention">@bmf</a></dd>
+    <dd>Twitter: <a href="https://twitter.com/_bmf_" class="user-mention">@_bmf_</a></dd>
 
-  <dt>Stanley Zheng</dt>
-  <dd>Github: <a href="https://github.com/stanzheng" class="user-mention">@Stanzheng</a></dd>
-  <dd>Twitter: <a href="https://twitter.com/stanzheng" class="user-mention">@StanZheng</a></dd>
-</dl>
+    <dt>Stanley Zheng</dt>
+    <dd>Github: <a href="https://github.com/stanzheng" class="user-mention">@Stanzheng</a></dd>
+    <dd>Twitter: <a href="https://twitter.com/stanzheng" class="user-mention">@StanZheng</a></dd>
+  </dl>
+</div>
