--- a/contact/index.html
+++ b/contact/index.html
@@ -28,7 +28,7 @@ title: "Contact Norfolk.js"
     <dd>Twitter: <a href="https://twitter.com/_bmf_" class="user-mention">@_bmf_</a></dd>
 
     <dt>Stanley Zheng</dt>
-    <dd>Github: <a href="https://github.com/stanzheng" class="user-mention">@Stanzheng</a></dd>
-    <dd>Twitter: <a href="https://twitter.com/stanzheng" class="user-mention">@StanZheng</a></dd>
+    <dd>Github: <a href="https://github.com/stanzheng" class="user-mention">@stanzheng</a></dd>
+    <dd>Twitter: <a href="https://twitter.com/stanzheng" class="user-mention">@stanzheng</a></dd>
   </dl>
 </div>
