Add NodeBots Day page

--- a/about/index.html
+++ b/about/index.html
@@ -12,8 +12,8 @@ title: "About Norfolk.js"
 
 <p>Norfolk.js is a JavaScript development user group in Norfolk, VA.</p>
 
-<p>We want to get local developers together to consume pizza and beer and
-  talk about anything and everything JavaScript.</p>
+<p>We get local developers together to eat, drink, and
+  talk about anything and everything JavaScript. Sometimes we build JavaScript-powered robots.</p>
 
 <br>
 
