Add sponsorship prospectus for NBD

--- a/nodebots/index.html
+++ b/nodebots/index.html
@@ -21,6 +21,8 @@ we need community sponsors like you!</p>
 
 <h3>Sponsorship Levels:</h3>
 
+<p><a href="http://bit.ly/2tKlxBl">Sponsorship Prospectus</a></p>
+
 <div class="contacts">
     <p>Robot Build Kits: $50 each (min 3)</p>
     <p>Breakfast</p>
