Update links for sponsorship

--- a/nodebots/index.html
+++ b/nodebots/index.html
@@ -21,7 +21,7 @@ we need community sponsors like you!</p>
 
 <h3>Sponsorship Levels:</h3>
 
-<p><a href="http://bit.ly/2tKlxBl">Sponsorship Prospectus</a></p>
+<p><a href="http://bit.ly/nodebots-prospectus">See Sponsorship Prospectus</a></p>
 
 <div class="contacts">
     <p>Robot Build Kits: $50 each (min 3)</p>
@@ -29,6 +29,8 @@ we need community sponsors like you!</p>
     <p>Lunch</p>
     <p>Happy Hour</p>
 </div>
+
+<p><a href="http://bit.ly/nodebots-sponsor">Sponsor a kit!</a></p>
 
 <br>
 <h2>What Happens at NodeBots Day?</h2>
