--- a/nodebots/index.html
+++ b/nodebots/index.html
@@ -9,30 +9,35 @@ title: "Norfolk NodeBots"
 
 <p>July 29, 2017</p>
 
-<p>Old Dominion University Webb Center</p>
+<p>Old Dominion University Webb Center Cafeteria</p>
 
 <br>
 <h2>Sponsors Needed!</h2>
 
 <p>For the last three years, our NodeBots Day has nearly doubled in size each year. Our 2016 event
-had 140 attendees! In order to maintain our current growth and keep this event free to the public,
+had 140 attendees! In order to maintain our current growth and keep this event <b>free</b> to the public,
 we need community sponsors like you!</p>
 <p><a href="/contact/index.html">Contact Us</a> for more information.</p>
 
+<br>
 <h3>Sponsorship Levels:</h3>
 
-<p><a href="http://bit.ly/nodebots-prospectus">See Sponsorship Prospectus</a></p>
+<p><a href="http://bit.ly/nodebots-prospectus">Sponsorship Prospectus</a></p>
 
 <div class="contacts">
-    <p>Robot Build Kits: $50 each (min 3)</p>
+    <p>Robot Build Kits: $50 each (min 3 for recognized sponsors)</p>
     <p>Breakfast</p>
     <p>Lunch</p>
     <p>Happy Hour</p>
 </div>
 
-<p><a href="http://bit.ly/nodebots-sponsor">Sponsor a kit!</a></p>
+<h3>Donate to Event</h3>
 
-<br>
+<p>Sponsor a single kit or meal for attendees during the event.</p>
+
+<p><a href="http://bit.ly/nodebots-sponsor">Donation Form</a></p>
+
+<br><br>
 <h2>What Happens at NodeBots Day?</h2>
 
 <p><a href="https://goo.gl/photos/WrXLLwUaXEy1Wbwz8">See last year's event photos!</a></p>
