--- a/nodebots/index.html
+++ b/nodebots/index.html
@@ -12,6 +12,16 @@ title: "Norfolk NodeBots"
 <p>Old Dominion University Webb Center Cafeteria</p>
 
 <br>
+<h2>Additional Information & RSVP</h2>
+
+<p><a href="https://www.meetup.com/NorfolkJS/events/233360490/">Meetup Event</a></p>
+
+<br><br>
+<h2>What Happens at NodeBots Day?</h2>
+
+<p><a href="https://goo.gl/photos/WrXLLwUaXEy1Wbwz8">See last year's event photos!</a></p>
+
+<br>
 <h2>Sponsors Needed!</h2>
 
 <p>For the last three years, our NodeBots Day has nearly doubled in size each year. Our 2016 event
@@ -38,17 +48,7 @@ we need community sponsors like you!</p>
 
 <p><a href="http://bit.ly/nodebots-sponsor">Donation Form</a></p>
 
-<br><br>
-<h2>What Happens at NodeBots Day?</h2>
-
-<p><a href="https://goo.gl/photos/WrXLLwUaXEy1Wbwz8">See last year's event photos!</a></p>
-
 <br>
-<h2>Robot Kit Information</h2>
+<h2>Robot Kit Plans and Open-source Code</h2>
 
 <p><a href="http://www.norfolkjs.org/motorized-sumobot">Norfolk.js Motorized Sumobot</a></p>
-
-<br>
-<h2>More Information & RSVP</h2>
-
-<p><a href="https://www.meetup.com/NorfolkJS/events/233360490/">Meetup Event</a></p>
