[update] update NodeBots Day information

--- a/nodebots/index.html
+++ b/nodebots/index.html
@@ -7,19 +7,19 @@ title: "Norfolk NodeBots"
 
 <h2>When & Where</h2>
 
-<p>July 29, 2017</p>
+<p>July 28, 2018</p>
 
 <p>Old Dominion University Webb Center Cafeteria</p>
 
 <br>
 <h2>Additional Information & RSVP</h2>
 
-<p><a href="https://www.meetup.com/NorfolkJS/events/233360490/">Meetup Event</a></p>
+<p><a href="https://www.meetup.com/NorfolkJS/events/251177248/">Meetup Event</a></p>
 
 <br>
 <h2>What Happens at NodeBots Day?</h2>
 
-<p><a href="https://goo.gl/photos/WrXLLwUaXEy1Wbwz8">See last year's event photos!</a></p>
+<p><a href="https://photos.app.goo.gl/B5gP7mlwgUHTvquG2">See last year's event photos!</a></p>
 
 <br>
 <h2>Robot Kit Plans and Open-source Code</h2>
@@ -29,8 +29,8 @@ title: "Norfolk NodeBots"
 <br><br>
 <h2>Sponsors Needed!</h2>
 
-<p>For the last three years, our NodeBots Day has nearly doubled in size each year. Our 2016 event
-had 140 attendees! In order to maintain our current growth and keep this event <b>free</b> to the public,
+<p>For the last four years, our NodeBots Day has nearly doubled in size each year. Our 2018 event
+had 180 attendees! In order to maintain our current growth and keep this event <b>free</b> to the public,
 we need community sponsors like you!</p>
 <p><a href="/contact/index.html">Contact Us</a> for more information.</p>
 
