--- a/nodebots/index.html
+++ b/nodebots/index.html
@@ -14,7 +14,7 @@ title: "Norfolk NodeBots"
 <br>
 <h2>Additional Information & RSVP</h2>
 
-<p><a href="https://www.meetup.com/NorfolkJS/events/251177248/">Meetup Event</a></p>
+<p><a href="https://nodebotsday-2018.eventbrite.com">Please RSVP!</a></p>
 
 <br>
 <h2>What Happens at NodeBots Day?</h2>
