--- a/nodebots/index.html
+++ b/nodebots/index.html
@@ -7,19 +7,19 @@ title: "Norfolk NodeBots"
 
 <h2>When & Where</h2>
 
-<p>July 28, 2018</p>
+<p>July 27, 2019</p>
 
 <p>Old Dominion University Webb Center Cafeteria</p>
 
 <br>
 <h2>Additional Information & RSVP</h2>
 
-<p><a href="https://nodebotsday-2018.eventbrite.com">Please RSVP!</a></p>
+<p><a href="https://nodebotsday-2019.eventbrite.com">Please RSVP!</a></p>
 
 <br>
 <h2>What Happens at NodeBots Day?</h2>
 
-<p><a href="https://photos.app.goo.gl/B5gP7mlwgUHTvquG2">See last year's event photos!</a></p>
+<p><a href="https://photos.app.goo.gl/eWW27J11z8rC27e56">See last year's event photos!</a></p>
 
 <br>
 <h2>Robot Kit Plans and Open-source Code</h2>
@@ -29,8 +29,7 @@ title: "Norfolk NodeBots"
 <br><br>
 <h2>Sponsors Needed!</h2>
 
-<p>For the last four years, our NodeBots Day has nearly doubled in size each year. Our 2018 event
-had 180 attendees! In order to maintain our current growth and keep this event <b>free</b> to the public,
+<p>For the last five years, our NodeBots Day has grown from 25 attendees to nearly 250. In order to maintain our current growth and keep this event <b>free</b> to the public,
 we need community sponsors like you!</p>
 
 <br>
@@ -45,9 +44,11 @@ we need community sponsors like you!</p>
     <p>Happy Hour</p>
 </div>
 
+<!-- 
 <br>
 <h3>Donate to Event</h3>
 
-<p>Sponsor a robot kit or meal for attendees during the event.</p>
+<p>Sponsor a robot kit or meal for attendees during the event.</p> 
 
-<p><a href="https://ti.to/nodebots-day/nodebots-day-2018">Donation Form</a></p>
+<p><a href="https://ti.to/nodebots-day/nodebots-day-2018">Donation Form</a></p> 
+-->
