--- a/nodebots/index.html
+++ b/nodebots/index.html
@@ -35,7 +35,7 @@ we need community sponsors like you!</p>
 <br>
 <h3>Sponsorship Levels:</h3>
 
-<p><a href="http://bit.ly/nodebots-prospectus-2018">Sponsorship Prospectus</a></p>
+<p><a href="https://drive.google.com/open?id=1bmsekE46-tLM1j8EjwwJjjZiuccrXhNh">2019 Sponsorship Prospectus</a></p>
 
 <div class="contacts">
     <p>Robot Build Kits: $50 each (min 3 for recognized sponsors)</p>
