--- a/nodebots/index.html
+++ b/nodebots/index.html
@@ -42,6 +42,7 @@ we need community sponsors like you!</p>
     <p>Breakfast</p>
     <p>Lunch</p>
     <p>Happy Hour</p>
+    <p>Exhibitor Table</p>
 </div>
 
 <!-- 
