--- a/about/index.html
+++ b/about/index.html
@@ -20,3 +20,38 @@ title: "About Norfolk.js"
 <h3>Meetup Information</h3>
 
 <p><a href="http://www.meetup.com/norfolkjs">http://www.meetup.com/norfolkjs</a></p>
+
+<br>
+
+<h3> Norfolk.js Code of Conduct </h3>
+
+<p>All members of Norfolk.js are required to agree with the following code of conduct. Cooperation with this Code of Conduct from all participants helps to ensure a safe environment for all attendees. This Code of Conduct applies to all of our events, including beer.js and SushiJS.</p>
+
+<pre>*tl;dr: Don't be a jerk, or you can't play on the playground.*.</pre>
+
+<h4>The Brief Version</h4>
+
+<p>Norfolk.js is dedicated to providing a harassment-free conference experience for everyone, regardless of gender, age, sexual orientation, disability, physical appearance, body size, race, or religion (or lack thereof). We do not tolerate harassment of attendees in any form. Sexual language and imagery is not appropriate for any venue, including talks, workshops, parties, Twitter and other online media. Attendees violating this code may be asked to leave at the discretion of the Norfolk.js organizers.</p>
+
+<h4> The Much Less Brief Version </h4>
+
+<p>Harassment includes offensive verbal comments related to gender, age, sexual orientation, disability, physical appearance, body size, race, religion, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.
+
+<p>Participants asked to stop any harassing behavior are expected to comply immediately.</p>
+
+<p>Sponsors are also subject to the anti-harassment policy. In particular, sponsors should not use sexualized images,
+activities, or other material.</p>
+
+<p>If a participant engages in harassing behavior, organizers may take any action they deem appropriate, including
+warning the offender or expulsion from the event.</p>
+
+<p>If you are being harassed, notice that someone else is being harassed, or have any other concerns,
+please contact an organizer immediately.</p>
+
+<p>We expect participants to follow these rules at meeting and workshop venues and Norfolk.js-related social events.</p>
+
+<h4>Need Help?</h4>
+
+<p>Feel free to contact any of the organizers identified on the <a href="http://www.norfolkjs.org/contact/index.html">website</a> or <a href="http://www.meetup.com/NorfolkJS/members/?op=leaders">meetup page</a>.</p>
+
+<p>Adapted from: <a href="http://confcodeofconduct.com/">Conference Code of Conduct</a></p>
