--- a/about/index.html
+++ b/about/index.html
@@ -10,6 +10,8 @@ title: "About Norfolk.js"
     <span class="octicon octicon-link"></span></a>About
 </h3>
 
+<img src="../assets/DSCF9541-Enhanced-NR.jpg" />
+
 <p>Norfolk.js is a JavaScript development user group in Norfolk, VA.</p>
 
 <p>We get local developers together to eat, drink, and
