adds images, cleans up people/humans txt

--- a/content/about/index.html
+++ b/content/about/index.html
@@ -8,6 +8,8 @@ title: About Norfolk.js
     <a name="about" class="anchor" href="#about"> <span class="octicon octicon-link"></span></a>About
 </h3>
 
+<img src="../images/DSCF9541-Enhanced-NR.jpg" />
+
 <p>Norfolk.js is a JavaScript development user group in Norfolk, VA.</p>
 
 <p>
