--- a/content/sponsors/index.html
+++ b/content/sponsors/index.html
@@ -4,7 +4,7 @@ title: Our Awesome Sponsors
 
 <script src="/javascripts/sponsors.js"></script>
 
-<h1>Our Awesome Sponsors</h1>
+<h1>Our Awesome Sponsors wow</h1>
 
 <div class="api_container">
     <div class="sponsors"></div>
