--- a/content/404.html
+++ b/content/404.html
@@ -1,1 +1,4 @@
-404 - not found :(
+<h2>404 - Not Found :(</h2>
+
+<p>The page you are looking for does not exist.</p>
+<p>How about you go back to the <a href="/">home page</a>?</p>
