--- a/content/index.html
+++ b/content/index.html
@@ -6,6 +6,8 @@ title: Upcoming Events
 
 <h1>Upcoming Events</h1>
 
+<p>Coming soon...</p>
+
 <div class="api_container">
     <div class="events"></div>
 </div>
